--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,7 @@
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.0-rc.6",
-    "web-vitals": "^2.1.4",
-    "tailwindcss": "^3.3.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
