--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,5 +32,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-intersection-observer": "^9.5.2",
+    "react-query": "^3.39.3"
   }
 }
