--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "react-tailwindcss-datepicker": "^1.6.3",
     "styled-components": "^6.0.0-rc.6",
     "tailwindcss": "^3.3.2",
     "web-vitals": "^2.1.4"
