--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "jimp": "0.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "react-verification-input": "^3.3.0",
+    "react-wavify": "^1.8.3",
     "styled-components": "^6.0.0-rc.6",
     "tailwind-datepicker-react": "^1.4.0",
     "tailwindcss": "^3.3.2",
@@ -38,6 +40,7 @@
   },
   "devDependencies": {
     "react-intersection-observer": "^9.5.2",
-    "react-query": "^3.39.3"
+    "react-query": "^3.39.3",
+    "typescript": "4.1.3"
   }
 }
