--- a/app/package.json
+++ b/app/package.json
@@ -24,7 +24,9 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "expo-linear-gradient": "~12.1.2",
+    "react-native-svg": "13.4.0"
   },
   "private": true
 }
