--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "main": "server.js",
   "scripts": {
     "dev": "node killProcesses.js 4000 && nodemon server.js",
-    "fei": "nodemon server.js",
     "start": "node server.js",
     "heroku-postbuild": " NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "keywords": [],
-  "type": "commonjs",
+  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -19,7 +18,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.2",
     "nodemailer": "^6.9.3",
