--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
